# Kernel-surrogate-models

./: .gitignore  README.md  pyproject.toml
exp_trak/: train_cifar.py
icl_examples/: icl_example.py
icl_examples/data/coin_flip/: coin_flip_subset_scores_loss.json  coin_flip_train_ids_list.json
kernelsm/: __init__.py  data.py  kernelsm.py  utils.py
modular_examples/: modular_addition.json  modular_example.py  modular_quad.json
src/exp_cifar/: datamodels.py  eval_trak.py  generate_subsets.py  influence.py  main.py  train_cifar.py
src/exp_cifar/outdir/: influence_results_tmp_0_1_last-i_0.json  influences_results_meta_0-1.json
src/exp_cifar/pytorch_influence_functions/: calc_influence_function.py
src/exp_cifar/utils/: data.py
src/exp_icl/: generate_prompts.py  run_inference.py  test.py
src/exp_modular_arithmetic/: README.md  compute_datamodels.py  compute_if.py  compute_trak.py  datamodels.py  eval_if.py  eval_trak.py  main.py  phase_indices_utils.py  run_compute_if.py  test.py  test_phase_indices.py  train_all.py  train_subset.py
src/exp_modular_arithmetic/scripts/: run_datamodels.sh  run_trak.sh
src/exp_modular_arithmetic/src/: plot.py
src/exp_trak/: train_cifar.py
src/figrues/: plot_datamodels_if.ipynb  plot_hessian_datamodel.ipynb  plot_hessianreg_error.ipynb  plot_hessianreg_hessian.ipynb  plot_hessianreg_lds.ipynb  plot_linear_kernel.ipynb  plot_sample_complexity.ipynb
taskHessian/: datamodels.py  hessian.py  plot.py  solver.py  svgp.py  utils.py
taskHessian/trak/: gradient_computers.py  modelout_functions.py  traker.py
(+58 files in other folders)
